Begin work on main UI template

--- a/ui/login.html
+++ b/ui/login.html
@@ -11,7 +11,7 @@
     <div class="loginContainer">
         <p class="loginHead">Discord Bot GUI</p>
         <p class="loginSubhead">By Xnopyt</p>
-        <p class="loginLabel">TOKEN</p>
+        <p id="tlabel" class="loginLabel">TOKEN</p>
         <input id="token" class="tokenInput" type="password">
         <button id="loginButton" class="loginButton">Login</button>
     </div>
