--- a/ui/main.html
+++ b/ui/main.html
@@ -11,13 +11,15 @@
 </head>
 <body>
     <div class="sidenav">
-        <a href="javascript:void(0);"><div>
+        <div class="server">
+            <div class="selector"></div>
             <i class="fas fa-home"></i>
-        </div></a>
+        </div>
         <hr>
-        <a href="javascript:void(0);"><div>
-            <p>YEET</p>
-        </div></a>
+        <div class="server selected">
+            <div class="selector"></div>
+            <p unselectable="on">YEET</p>
+        </div>
     </div>
     <div class="actionbar">
         <div class="actioninfo">
