More UI work and configure github actions

--- a/ui/login.html
+++ b/ui/login.html
@@ -12,20 +12,20 @@
         <p class="loginHead">Discord Bot GUI</p>
         <p class="loginSubhead">By Xnopyt</p>
         <!--[if lt IE 9]>
-		<p class="loginHead">Discord Bot GUI requires Internet Explorer 9 or higher.</p>
-        <p class="loginSubhead">Please upgrade Internet Explorer to use this software.</p>
+            <p class="loginHead">Discord Bot GUI requires Internet Explorer 9 or higher.</p>
+            <a href="javascript:void(0)" onclick="window.external.invoke('ieUpdate')"><p class="loginSubhead">Please upgrade Internet Explorer to use this software.</p></a>
         <![endif]-->
         <!--[if gte IE 9 | !IE ]> <!-->
         <p id="tlabel" class="loginLabel">TOKEN</p>
         <input id="token" class="tokenInput" type="password">
         <button id="loginButton" class="loginButton">Login</button>
+        <button class="loginButton" onclick="window.location.href='./main';">Main</button>
         <!--<![endif]-->
     </div>
 </body>
 <!--[if gte IE 9 | !IE ]> <!-->
 <script>
     window.onload = function() {
-        document.addEventListener('contextmenu', event => event.preventDefault());
         window.external.invoke("loginSetup");
     }
 </script>
