--- a/ui/main.html
+++ b/ui/main.html
@@ -30,6 +30,14 @@
         </div>
         <div class="chancontainer">
             <p class="chanhead">TEXT CHANNELS</p>
+            <div class="chan selected">
+                <i class="fas fa-hashtag"></i>
+                <p class="channame">General</p>
+            </div>
+            <div class="chan">
+                <i class="fas fa-hashtag"></i>
+                <p class="channame">Spam</p>
+            </div>
         </div>
         <div class="user">
             <div class="avatar">
@@ -43,7 +51,8 @@
     </div>
     <div class="main">
         <div class="infobar">
-
+            <i class="fas fa-hashtag"></i>
+            <p class="chantitle">General</p>
         </div>
         <div class="mainbox">
             <div class="messagebox">
