Add members to UI

--- a/ui/main.html
+++ b/ui/main.html
@@ -59,7 +59,12 @@
 
             </div>
             <div class="memberbar">
-
+                <p class="memberdesc">MEMBERS - 1</p>
+                <div class="member">
+                    <img class="avatar" src="./default.png">
+                    <p class="membername">Template Member</p>
+                </div>
+                </div>
             </div>
         </div>
     </div>
