Add message box

--- a/ui/main.html
+++ b/ui/main.html
@@ -56,7 +56,10 @@
         </div>
         <div class="mainbox">
             <div class="messagebox">
-
+                <div class="messages">
+                    
+                </div>
+                <input type="text" class="messageinput" placeholder="Message #General">
             </div>
             <div class="memberbar">
                 <p class="memberdesc">MEMBERS - 1</p>
