--- a/ui/main.html
+++ b/ui/main.html
@@ -44,7 +44,7 @@
                 <img src="./default.png">
             </div>
             <div class="username">
-                <p class="name">TEMPLATE USER</p>
+                <p class="name">Template User</p>
                 <p class="discriminator">#0000</p>
             </div>
         </div>
@@ -57,8 +57,50 @@
         <div class="mainbox">
             <div class="messagebox">
                 <div class="messages">
-                    
+                    <div class="message">
+                        <img class="msgavatar" src="./default.png">
+                        <p class="msguser">GLaDOS</p>
+                        <p class="msgtime">31/01/2002</p>
+                        <div class="msgbody">And believe me I am still alive. I'm doing science and I'm still alive. I feel fantastic and I'm still alive. While you're dying I'll be still alive. And when you're dead I'll be still alive. Still alive. STILL ALIVE!</div>
+                    </div>
+                    <div class="message">
+                        <img class="msgavatar" src="./default.png">
+                        <p class="msguser">GLaDOS</p>
+                        <p class="msgtime">31/01/2002</p>
+                        <div class="msgbody">Look at me still talking when there's science to do. When I look out there it makes me GLaD I'm not you. I've experiments to run, there is research to be done. On the people who are still alive</div>
+                    </div>
+                    <div class="message">
+                        <img class="msgavatar" src="./default.png">
+                        <p class="msguser">GLaDOS</p>
+                        <p class="msgtime">31/01/2002</p>
+                        <div class="msgbody">Go ahead and leave me. I think I prefer to stay inside. Maybe you'll find someone else to help you. Maybe Black Mesa. That was a joke, haha, FAT CHANCE. Anyway this cake is great. It's so delicious and moist</div>
+                    </div>
+                    <div class="message">
+                        <img class="msgavatar" src="./default.png">
+                        <p class="msguser">GLaDOS</p>
+                        <p class="msgtime">31/01/2002</p>
+                        <div class="msgbody">Now these points of data make a beautiful line. And we're out of beta, we're releasing on time. So I'm GLaD I got burned, think of all the things we learned. For the people who are still alive</div>
+                    </div>
+                    <div class="message">
+                        <img class="msgavatar" src="./default.png">
+                        <p class="msguser">GLaDOS</p>
+                        <p class="msgtime">31/01/2002</p>
+                        <div class="msgbody">I'm not even angry. I'm being so sincere right now. Even though you broke my heart and killed me. And tore me to pieces. And threw every piece into a fire. As they burned it hurt because. I was so happy for you</div>
+                    </div>
+                    <div class="message">
+                        <img class="msgavatar" src="./default.png">
+                        <p class="msguser">GLaDOS</p>
+                        <p class="msgtime">31/01/2002</p>
+                        <div class="msgbody">But there's no sense crying over every mistake. You just keep on trying till you run out of cake. And the science gets done. And you make a neat gun. For the people who are still alive</div>
+                    </div>
+                    <div class="message">
+                        <img class="msgavatar" src="./default.png">
+                        <p class="msguser">GLaDOS</p>
+                        <p class="msgtime">31/01/2002</p>
+                        <div class="msgbody">This was a triumph. I'm making a note here, HUGE SUCCESS. It's hard to overstate my satisfaction. Aperture Science. We do what we must because we can. For the good of all of us. Except the ones who are dead</div>
+                    </div>
                 </div>
+                <div class="inputborder"></div>
                 <input type="text" class="messageinput" placeholder="Message #General">
             </div>
             <div class="memberbar">
@@ -66,7 +108,6 @@
                 <div class="member">
                     <img class="avatar" src="./default.png">
                     <p class="membername">Template Member</p>
-                </div>
                 </div>
             </div>
         </div>
