Add logout button

--- a/ui/main.html
+++ b/ui/main.html
@@ -47,6 +47,7 @@
                 <p class="name">Template User</p>
                 <p class="discriminator">#0000</p>
             </div>
+            <i class="fas fa-sign-out-alt"></i>
         </div>
     </div>
     <div class="main">
