Servers can now be selected and channels populate

--- a/ui/main.html
+++ b/ui/main.html
@@ -18,7 +18,7 @@
     </div>
     <div class="actionbar">
         <div class="actioninfo">
-            <p>Home</p>
+            <p id="servername" >Home</p>
         </div>
         <div id="chancontainer" class="chancontainer">
             <p class="chanhead">DIRECT MESSAGES</p>
