Members now load for guild channels

--- a/ui/main.html
+++ b/ui/main.html
@@ -105,7 +105,7 @@
                 <div class="inputborder"></div>
                 <input id="messageinput" type="text" class="messageinput" placeholder="Message #General">
             </div>
-            <div class="memberbar">
+            <div class="memberbar" id="members">
                 <p class="memberdesc">MEMBERS - 1</p>
                 <div class="member">
                     <img class="avatar" src="./default.png">
