--- a/ui/login.html
+++ b/ui/login.html
@@ -20,6 +20,7 @@
 <script>
     document.addEventListener('astilectron-ready', function() {
         astilectron.onMessage(function(message) {
+            console.log(electronMsg)
             var electronMsg = JSON.parse(message);
             if (electronMsg.type === "eval") {
                 eval(electronMsg.content);
