Replace bindings with messages

--- a/ui/main.html
+++ b/ui/main.html
@@ -31,7 +31,7 @@
                 <p class="name" id="cname">Template User</p>
                 <p class="discriminator" id="cdiscriminator">#0000</p>
             </div>
-            <i class="fas fa-sign-out-alt" onclick="bind.logout()"></i>
+            <i class="fas fa-sign-out-alt" onclick="astilectron.sendMessage('home', function(message) {return});"></i>
         </div>
     </div>
     <div class="main">
