--- a/ui/main.html
+++ b/ui/main.html
@@ -8,6 +8,7 @@
     <title>Discord Bot GUI</title>
 </head>
 <body>
+    <div class="blocker" id="blocker"></div>
     <div id="sidenav" class="sidenav">
         <div id="home" class="server selected" onclick="astilectron.sendMessage('home', function(message) {return});">
             <div class="selector"></div>
