--- a/ui/main.html
+++ b/ui/main.html
@@ -10,7 +10,7 @@
 <body>
     <div class="blocker" id="blocker"></div>
     <div id="sidenav" class="sidenav">
-        <div id="home" class="server selected" onclick="bind.home()">
+        <div id="home" class="server selected" onclick="binder.home()">
             <div class="selector"></div>
             <i class="fas fa-home"></i>
             <div class="tooltip">Home</div>
