--- a/ui/main.html
+++ b/ui/main.html
@@ -8,7 +8,7 @@
     <title>Discord Bot GUI</title>
 </head>
 <body>
-    <div class="blocker" id="blocker"></div>
+    <div class="blocker" id="blocker" style="position: fixed; z-index: 99 !important; left: 0; top: 0; width: 100%; height: 100%; overflow: auto; background-color: rgb(54, 57, 63);"><div class="lds-roller"><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div></div></div>
     <div id="sidenav" class="sidenav">
         <div id="home" class="server selected" onclick="binder.home()">
             <div class="selector"></div>
@@ -32,7 +32,7 @@
                 <p class="name" id="cname">Template User</p>
                 <p class="discriminator" id="cdiscriminator">#0000</p>
             </div>
-            <i class="fas fa-sign-out-alt" onclick="bind.logout()"></i>
+            <i class="fas fa-sign-out-alt" onclick="binder.logout()"></i>
         </div>
     </div>
     <div class="main">
