--- a/ui/main.html
+++ b/ui/main.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Red+Hat+Text&display=swap" rel="stylesheet">
+    <link rel="stylesheet"
+      href="//cdn.jsdelivr.net/gh/highlightjs/cdn-release@9.17.1/build/styles/androidstudio.min.css">
     <title>Discord Bot GUI</title>
 </head>
 <body>
@@ -115,5 +117,6 @@
             </div>
         </div>
     </div>
+    <script>hljs.initHighlightingOnLoad();</script>
 </body>
 </html>
