--- a/ui/main.html
+++ b/ui/main.html
@@ -106,7 +106,7 @@
                     </div>
                 </div>
                 <div class="inputborder"></div>
-                <input id="messageinput" type="text" class="messageinput" placeholder="Message #General">
+                <textarea id="messageinput" type="text" class="messageinput" placeholder="Message #General"></textarea>
             </div>
             <div class="memberbar" id="members">
                 <p class="memberdesc">MEMBERS - 1</p>
