Add emoji picker (#6)

--- a/ui/login.html
+++ b/ui/login.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet"
       href="//cdn.jsdelivr.net/gh/highlightjs/cdn-release@9.17.1/build/styles/default.min.css">
     <script src="//cdn.jsdelivr.net/gh/highlightjs/cdn-release@9.17.1/build/highlight.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@joeattardi/emoji-button@2.8.2/dist/index.min.js"></script>
     <title>Discord Bot GUI - Login</title>
 </head>
 <body>
