--- a/ui/main.html
+++ b/ui/main.html
@@ -108,6 +108,7 @@
                 <div class="inputborder"></div>
                 <button class="fileupload" onclick="triggerUpload()"><i class="fas fa-plus-circle"></i></button>
                 <textarea id="messageinput" class="messageinput" placeholder="Message #General"></textarea>
+                <button class="emojiselect" id="emojiselect"><i class="fas fa-grin"></i></button>
             </div>
             <div class="memberbar" id="members">
                 <p class="memberdesc">MEMBERS - 1</p>
