--- a/ui/main.html
+++ b/ui/main.html
@@ -12,7 +12,7 @@
 <body>
     <div class="blocker" id="blocker" style="position: fixed; z-index: 99 !important; left: 0; top: 0; width: 100%; height: 100%; overflow: auto; background-color: rgb(54, 57, 63);"><div class="lds-roller"><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div></div></div>
     <div id="sidenav" class="sidenav">
-        <div id="home" class="server selected" onclick="astilectron.sendMessage('home', function(message) {return});">
+        <div id="home" class="server selected" onclick="wv('home');">
             <div class="selector"></div>
             <i class="fas fa-home"></i>
             <div class="tooltip">Home</div>
@@ -34,7 +34,7 @@
                 <p class="name" id="cname">Template User</p>
                 <p class="discriminator" id="cdiscriminator">#0000</p>
             </div>
-            <i class="fas fa-sign-out-alt" onclick="astilectron.sendMessage('logout', function(message) {return});"></i>
+            <i class="fas fa-sign-out-alt" onclick="wv('logout');"></i>
         </div>
     </div>
     <div class="main">
