Don't use local http server Edge does not allow connecting to a local or loopback address, so a local http server cannot be used.

--- a/ui/main.html
+++ b/ui/main.html
@@ -28,7 +28,7 @@
         </div>
         <div class="user">
             <div class="avatar">
-                <img id="cavatar" src="./default.png">
+                <img id="cavatar" src="https://cdn.discordapp.com/embed/avatars/1.png">
             </div>
             <div class="username">
                 <p class="name" id="cname">Template User</p>
@@ -49,7 +49,7 @@
                         <div class="spacer"></div>
                         <div class="message">
                             <div class="nowrap">
-                                <img class="msgavatar" src="./default.png">
+                                <img class="msgavatar" src="https://cdn.discordapp.com/embed/avatars/1.png">
                                 <p class="msguser">GLaDOS</p>
                                 <p class="msgtime">31/01/2002</p>
                             </div>
@@ -57,7 +57,7 @@
                         </div>
                         <div class="message">
                             <div class="nowrap">
-                                <img class="msgavatar" src="./default.png">
+                                <img class="msgavatar" src="https://cdn.discordapp.com/embed/avatars/1.png">
                                 <p class="msguser">GLaDOS</p>
                                 <p class="msgtime">31/01/2002</p>
                             </div>
@@ -65,7 +65,7 @@
                         </div>
                         <div class="message">
                             <div class="nowrap">
-                                <img class="msgavatar" src="./default.png">
+                                <img class="msgavatar" src="https://cdn.discordapp.com/embed/avatars/1.png">
                                 <p class="msguser">GLaDOS</p>
                                 <p class="msgtime">31/01/2002</p>
                             </div>
@@ -73,7 +73,7 @@
                         </div>
                         <div class="message">
                             <div class="nowrap">
-                                <img class="msgavatar" src="./default.png">
+                                <img class="msgavatar" src="https://cdn.discordapp.com/embed/avatars/1.png">
                                 <p class="msguser">GLaDOS</p>
                                 <p class="msgtime">31/01/2002</p>
                             </div>
@@ -81,7 +81,7 @@
                         </div>
                         <div class="message">
                             <div class="nowrap">
-                                <img class="msgavatar" src="./default.png">
+                                <img class="msgavatar" src="https://cdn.discordapp.com/embed/avatars/1.png">
                                 <p class="msguser">GLaDOS</p>
                                 <p class="msgtime">31/01/2002</p>
                             </div>
@@ -89,7 +89,7 @@
                         </div>
                         <div class="message">
                             <div class="nowrap">
-                                <img class="msgavatar" src="./default.png">
+                                <img class="msgavatar" src="https://cdn.discordapp.com/embed/avatars/1.png">
                                 <p class="msguser">GLaDOS</p>
                                 <p class="msgtime">31/01/2002</p>
                             </div>
@@ -97,7 +97,7 @@
                         </div>
                         <div class="message">
                             <div class="nowrap">
-                                <img class="msgavatar" src="./default.png">
+                                <img class="msgavatar" src="https://cdn.discordapp.com/embed/avatars/1.png">
                                 <p class="msguser">GLaDOS</p>
                                 <p class="msgtime">31/01/2002</p>
                             </div>
@@ -113,7 +113,7 @@
             <div class="memberbar" id="members">
                 <p class="memberdesc">MEMBERS - 1</p>
                 <div class="member">
-                    <img class="avatar" src="./default.png">
+                    <img class="avatar" src="https://cdn.discordapp.com/embed/avatars/1.png">
                     <p class="membername">Template Member</p>
                 </div>
             </div>
