--- a/ui/login.html
+++ b/ui/login.html
@@ -9,6 +9,7 @@
       href="//cdn.jsdelivr.net/gh/highlightjs/cdn-release@9.17.1/build/styles/default.min.css">
     <script src="//cdn.jsdelivr.net/gh/highlightjs/cdn-release@9.17.1/build/highlight.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@joeattardi/emoji-button@2.8.2/dist/index.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/simplebar/5.2.0/simplebar.min.js"></script>
     <title>Discord Bot GUI - Login</title>
 </head>
 <body>
