--- a/ui/main.html
+++ b/ui/main.html
@@ -7,24 +7,29 @@
     <link href="https://fonts.googleapis.com/css?family=Red+Hat+Text&display=swap" rel="stylesheet">
     <link rel="stylesheet"
       href="//cdn.jsdelivr.net/gh/highlightjs/cdn-release@9.17.1/build/styles/androidstudio.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/simplebar/5.2.0/simplebar.min.css" />
     <title>Discord Bot GUI</title>
 </head>
 <body>
     <div class="blocker" id="blocker" style="position: fixed; z-index: 99 !important; left: 0; top: 0; width: 100%; height: 100%; overflow: auto; background-color: rgb(54, 57, 63);"><div class="lds-roller"><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div></div></div>
-    <div id="sidenav" class="sidenav">
+    <div class="sidenav" data-simplebar>
+        <div id="sidenav" style="overflow-y: scroll;">
         <div id="home" class="server selected" onclick="wv('home');">
             <div class="selector"></div>
             <i class="fas fa-home"></i>
             <div class="tooltip">Home</div>
         </div>
         <hr>
+        </div>
     </div>
     <div class="actionbar">
         <div class="actioninfo">
             <p id="servername" >Home</p>
         </div>
-        <div id="chancontainer" class="chancontainer">
-            <p class="chanhead">DIRECT MESSAGES</p>
+        <div class="chancontainer" data-simplebar>
+            <div style="overflow-y: scroll;" id="chancontainer">
+                <p class="chanhead">DIRECT MESSAGES</p>
+            </div>
         </div>
         <div class="user">
             <div class="avatar">
@@ -44,7 +49,7 @@
         </div>
         <div id="mainbox" class="mainbox" style="visibility: hidden;">
             <div class="messagebox">
-                <div class="messages">
+                <div class="messages" data-simplebar>
                     <div id="messages">
                         <div class="spacer"></div>
                         <div class="message">
@@ -110,11 +115,8 @@
                 <textarea id="messageinput" class="messageinput" placeholder="Message #General"></textarea>
                 <button class="emojiselect" id="emojiselect"><i class="fas fa-grin"></i></button>
             </div>
-            <div class="memberbar" id="members">
-                <p class="memberdesc">MEMBERS - 1</p>
-                <div class="member">
-                    <img class="avatar" src="https://cdn.discordapp.com/embed/avatars/1.png">
-                    <p class="membername">Template Member</p>
+            <div class="memberbar">
+                <div style="overflow-y: scroll;" id="members"></div>
                 </div>
             </div>
         </div>
