Stop scrollbar showing when message box isn't loaded

--- a/ui/main.html
+++ b/ui/main.html
@@ -47,7 +47,7 @@
             <i id="infoicon" class="fas fa-hashtag" style="visibility: hidden;"></i>
             <p id="channeltitle" class="chantitle" style="visibility: hidden;">Home</p>
         </div>
-        <div id="mainbox" class="mainbox" style="visibility: hidden;">
+        <div id="mainbox" class="mainbox" style="display: none;">
             <div class="messagebox">
                 <div class="messages" data-simplebar>
                     <div id="messages">
