Fix server spacing

--- a/ui/main.html
+++ b/ui/main.html
@@ -19,7 +19,7 @@
             <i class="fas fa-home"></i>
             <div class="tooltip">Home</div>
         </div>
-        <hr>
+        <div class="spacer"></div>
         </div>
     </div>
     <div class="actionbar">
