--- a/ui/main.html
+++ b/ui/main.html
@@ -14,10 +14,10 @@
     <div class="blocker" id="blocker" style="position: fixed; z-index: 99 !important; left: 0; top: 0; width: 100%; height: 100%; overflow: auto; background-color: rgb(54, 57, 63);"><div class="lds-roller"><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div></div></div>
     <div class="sidenav" data-simplebar>
         <div id="sidenav" style="overflow-y: scroll;">
-        <div id="home" class="server selected" onclick="wv('home');">
+        <div id="home" class="server selected" onclick="wv('home');" mouseenter="showServerTooltip" mouseleave="hideServerTooltip">
             <div class="selector"></div>
             <i class="fas fa-home"></i>
-            <div class="tooltip">Home</div>
+            <div class="tooltip-text">Home</div>
         </div>
         <div class="spacer"></div>
         </div>
@@ -121,6 +121,7 @@
             </div>
         </div>
     </div>
+    <div id="tooltip" class="tooltip"></div>
     <script>hljs.initHighlightingOnLoad();</script>
     <input type="file" display="hidden" id="fileupload" onchange="completeUpload(this.files)">
 </body>
