--- a/ui/login.html
+++ b/ui/login.html
@@ -15,5 +15,10 @@
         <input id="token" class="tokenInput" type="password">
         <button id="loginButton" class="loginButton">Login</button>
     </div>
+    <div id="contextmenu" class="contextmenu">
+        <div id="cutbutton" class="button">Cut</div>
+        <div id="copybutton" class="button">Copy</div>
+        <div id="pastebutton" class="button">Paste</div>
+    </div>
 </body>
 </html>
