--- a/ui/login.html
+++ b/ui/login.html
@@ -20,5 +20,10 @@
         <div id="copybutton" class="button">Copy</div>
         <div id="pastebutton" class="button">Paste</div>
     </div>
+    <div id="alertbox" class="alertbox">
+        <p id="alerttitle" class="alerttitle">Test Title</p>
+        <p id="alertmsg" class="alertmsg">Test alert, this message is a test.</p>
+        <center><button id="alertclose" class="alertclose" onclick="document.getElementById('alertbox').style.display = 'none'">Ok</button></center>
+    </div>
 </body>
 </html>
