Add message delete option to context menu

--- a/ui/login.html
+++ b/ui/login.html
@@ -19,6 +19,7 @@
         <div id="cutbutton" class="button">Cut</div>
         <div id="copybutton" class="button">Copy</div>
         <div id="pastebutton" class="button">Paste</div>
+        <div id="deletebutton" class="button">Delete</div>
     </div>
     <div id="alertbox" class="alertbox">
         <p id="alerttitle" class="alerttitle">Test Title</p>
