--- a/ui/main.html
+++ b/ui/main.html
@@ -129,6 +129,7 @@
         <div id="cutbutton" class="button">Cut</div>
         <div id="copybutton" class="button">Copy</div>
         <div id="pastebutton" class="button">Paste</div>
+        <div id="deletebutton" class="button">Delete</div>
     </div>
     <script>hljs.initHighlightingOnLoad();</script>
     <input type="file" display="hidden" id="fileupload" onchange="completeUpload(this.files)">
