Show roles in member bar #4

--- a/ui/main.html
+++ b/ui/main.html
@@ -114,8 +114,7 @@
                 <button class="emojiselect" id="emojiselect"><i class="fas fa-grin"></i></button>
             </div>
             <div class="memberbar">
-                <div style="overflow-y: scroll;" id="members"></div>
-                </div>
+                <div id="members"></div>
             </div>
         </div>
     </div>
