fake localStorage and load a data url Slightly better load times and a better fix for emoji button.

--- a/ui/login.html
+++ b/ui/login.html
@@ -26,5 +26,6 @@
         <p id="alertmsg" class="alertmsg">Test alert, this message is a test.</p>
         <center><button id="alertclose" class="alertclose" onclick="document.getElementById('alertbox').style.display = 'none'">Ok</button></center>
     </div>
+    <script>window.onload = function() { wv("loginSetup") }</script> 
 </body>
 </html>
